--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <meta name="description"
-          content="Software-Engineer with the drive for self-improvement"/>
+          content="Fullstack Software-Entwickler mit dem Willen sich stetig zu verbessern!"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <title>Jan Adamczyk</title>
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <title>Portfolio Website von Jan Adamczyk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
