SEO Touch icons

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" sizes="196x196">
+    <meta name="msapplication-square70x70logo" content="%PUBLIC_URL%/favicon.png">
+    <meta name="msapplication-square150x150logo" content="%PUBLIC_URL%/favicon.png">
+    <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/favicon.png">
+    <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/favicon.png">
     <title>Portfolio Website von Jan Adamczyk</title>
   </head>
   <body>
