--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description"
-          content="Fullstack Software-Entwickler mit dem Willen sich stetig zu verbessern!"/>
+          content="Fullstack Software-Engineer mit dem Willen sich stetig zu verbessern! Eine Auflistung meiner neuesten Projekte, von Websiten über IOT bis 3D-Druck."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
 
