--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
+    <meta name="theme-color" content="#000000"/>
     <meta name="description"
           content="Fullstack Software-Engineer mit dem Willen sich stetig zu verbessern! Eine Auflistung meiner neuesten Projekte, von Websiten über IOT bis 3D-Druck."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
